--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,46 @@
-image: docker:latest
-
 variables:
   FTP_SHOST: ftp.bluewindlab.com
   FTP_SUSERNAME: u168445203.projects_staging
   FTP_HOST: ftp.bluewindlab.net
   FTP_PUSERNAME: u138608855.projects_production
-  BUILD_DIR: /builds/wpfm-addon/wpfm-faq-collector-addon
+  BUILD_DIR: /home/gitlab-runner/builds/$CI_RUNNER_SHORT_TOKEN/0/wpfm-addon/wpfm-faq-collector-addon
   DEPLOY_DIR: wpfm/wp-content/plugins/wpfm-faq-collector-addon
 stages:
+  - build
   - staging
   - production
 
 before_script:
-  - apk add lftp
+  - sudo apt-get install -y lftp && sudo apt-get install -y npm && sudo apt-get install -y curl
+
+build:
+  stage: build
+  image: node:lts
+  tags:
+    - ci
+    - devops
+  only:
+    - staging
+    - production
+  script:
+    - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+    - export NVM_DIR="$HOME/.nvm"
+    - source "$NVM_DIR/nvm.sh"
+    - nvm install 16.20.0
+    - npm -v #NPM Version.
+    - node -v #"Node Version."
+    - echo "Installing Packages."
+    - npm install
+    - echo "Building artifacts and assets."
+    - npm run build
+  artifacts:
+    paths:
+      - $BUILD_DIR/assets # Replace with the actual path to your build directory
 
 staging:
   stage: staging
+  dependencies:
+    - build
   only:
     - staging
   tags:
@@ -23,10 +48,13 @@ staging:
     - devops
   script:
     - pwd
+    - echo "Updating plugin files.."
     - lftp -e "set ssl:verify-certificate no; open $FTP_SHOST; user $FTP_SUSERNAME $FTP_SPASSWORD; mirror -X .* -X .*/ --reverse --verbose $BUILD_DIR /wpplugins/$DEPLOY_DIR; bye"
 
 production:
   stage: production
+  dependencies:
+    - build
   only:
     - production
   tags:
@@ -34,4 +62,5 @@ production:
     - devops
   script:
     - pwd
+    - echo "Updating plugin files.."
     - lftp -e "set ssl:verify-certificate no; open $FTP_HOST; user $FTP_PUSERNAME $FTP_PPASSWORD; mirror -X .* -X .*/ --reverse --verbose $BUILD_DIR /wpplugin/$DEPLOY_DIR; bye"
