--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "wpfm-faq-collector-addon",
-  "version": "1.1.8",
-  "description": "",
+  "version": "1.1.9",
+  "description": "Finding an excellent way to collect questions from the user end for your WooCommerce-powered site? FAQ collector addon provides a way to get user questions directly from the product page.",
   "main": "index.js",
   "scripts": {
     "build": "wp-scripts build",
     "start": "wp-scripts start",
     "dev": "wp-scripts start",
     "start:hot": "wp-scripts start --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "plugin-zip": "wp-scripts plugin-zip"
+    "plugin-zip": "wp-scripts plugin-zip",
+    "make-pot": "wp i18n make-pot . lang/wpfm-faq-collector-addon.pot --slug=wpfm-faq-collector-addon --domain=bwl-wpfmfc --exclude=node_modules,src",
+    "make-json": "wp i18n make-json languages/ --no-purge"
   },
   "author": "Mahbub Alam Khan <hkhan.cse@gmail.com> (https://bluewindlab.net/)",
   "license": "MIT",
